---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

/// Core error types
#[derive(Debug)]
pub enum ProcessingError {
    IoError(String),
    ParseError(String),
    ValidationError(String),
}

impl std::fmt::Display for ProcessingError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            ProcessingError::IoError(msg) => write!(f, "IO Error: {}", msg),
            ProcessingError::ParseError(msg) => write!(f, "Parse Error: {}", msg),
            ProcessingError::ValidationError(msg) => {
                write!(f, "Validation Error: {}", msg)
            }
        }
    }
}
